ecmascript/parser/tests/test262-error-references/fail/17ee4c1ca63f700d.js.stderr
error: Expected Semi
 --> $DIR/tests/test262-parser/fail/17ee4c1ca63f700d.js:1:4
  |
1 | 0B12
  |    ^

